# TPdI

./: .gitignore
001 - py5/002 PRA/: 001_basico.py  001b_basico_HSV.py  002_info.py  003_RGB.py  004_HSV.py  005_upload_img.py  006_pixeles.py  007_pixeles.py  008_filtro.py  009_mouse.py  009b_mouse.py  009c_mouse.py  010_filtro.py  011_filtro.py  012_filtro.py  013_filtro.py  014_filtro.py  015_dibujo.py  info.txt
002 - py5/002 PRA/: 00_setup_colab.ipynb  02a_fundamentos_teoria_colab.ipynb  02a_fundamentos_teoria_local.ipynb  02c_laboratorio_fundamentos.ipynb
002 - py5/003 LAB/: 2026_PDI_Zambrano_Michell_canal_mouse.py  2026_PDI_Zambrano_Michell_lupa.py
neural_networks/: 001_Red_Neuronal.ipynb  002_Clasificacion.ipynb  003_CNNs_Full.ipynb  004_Teachable_Machine_Dataset_Propio_Gradio.ipynb  README.md  labels.txt  main.py  pyproject.toml
neural_networks/dataset/Girasoles/: D_753671-MLA89824884579_082025-C.jpg.txt  diferentes-tipos-y-tamaños-de-los-girasoles-enormes-girasole.jpg.txt  fbx_-_sunflower-x20-vase-w-candle-no-ribbon-1.jpg.txt
neural_networks/dataset/Rudbeckias/: rudbeckia-prairie-sun-seed-s747_dccd8b68-34c3-466d-b780-7063.jpg.txt
neural_networks/datos/: ._celsius.csv
