[project]
name = "zambrano-michell-pdi-1c-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.10",
]
